2008-06-19 06:09  rsbivand

	* R/: gwr.R, gwr1.R: spurious gwr.e

2008-06-15 03:47  rsbivand

	* DESCRIPTION, INDEX, R/gwr.whole.test.R: bug in single coefficient
	  tests

2008-02-18 20:43  rsbivand

	* DESCRIPTION, R/gwr.R, R/gwr.cv.R, R/gwr.gauss.R, R/gwr1.R,
	  R/gwr1.cv.R, R/zzz.R, man/ggwr.Rd, man/ggwr.sel.Rd, man/gwr.Rd,
	  man/gwr.bisquare.Rd, man/gwr.cv.Rd, man/gwr.gauss.Rd, ChangeLog:
	  RMSE and gwr.Gauss fixes, note default kernel changed and default
	  CV score changed

2007-10-31 14:39  rsbivand

	* DESCRIPTION, R/gwe.R, R/gwr.R, R/gwr1.R, man/gw.cov.Rd,
	  man/gwr.Rd, ChangeLog, inst/ChangeLog: thingy to slot

2007-09-04 14:55  rsbivand

	* ChangeLog, inst/ChangeLog: Changelog

2007-08-23 11:16  rsbivand

	* ChangeLog, R/gwr.whole.test.R, inst/ChangeLog, man/gw.adapt.Rd:
	  weights

2007-08-23 09:41  rsbivand

	* ChangeLog, DESCRIPTION, INDEX, R/gwr.R, R/gwr.whole.test.R,
	  inst/ChangeLog, man/gwr.Rd: gwr weights

2007-08-08 20:41  rsbivand

	* DESCRIPTION, R/gwr.whole.test.R: df1 in BFC99

2007-04-21 06:27  rsbivand

	* DESCRIPTION, INDEX, R/gwr.R, R/gwr.morantest.R, R/gwr1.R,
	  man/gwr.morantest.Rd: GE dimnames

2007-03-23 20:21  rsbivand

	* DESCRIPTION, INDEX, R/gwr.R: snow

2007-03-09 19:44  rsbivand

	* R/gwr.whole.test.R, man/LMZ.F3GWR.test.Rd: new tests

2007-02-28 20:52  rsbivand

	* DESCRIPTION, R/gwr.morantest.R, man/gwr.morantest.Rd: GWR moran

2007-02-28 13:27  rsbivand

	* R/gwr.R, man/gwr.Rd: cluster GWR

2007-02-01 15:14  rsbivand

	* DESCRIPTION, man/ggwr.Rd, man/ggwr.sel.Rd, man/gwr.Rd, ChangeLog,
	  inst/ChangeLog: 0.4-01 release

2007-01-31 15:53  rsbivand

	* DESCRIPTION, INDEX, R/gwr.R, R/gwr.cv.R, R/gwr1.R, R/gwr1.cv.R,
	  man/gwr.Rd, man/gwr.cv.Rd, man/ggwr.Rd, man/ggwr.sel.Rd,
	  ChangeLog, inst/ChangeLog: generalised GWR

2007-01-09 08:58  rsbivand

	* ChangeLog, DESCRIPTION, R/gwr.R, R/gwr.cv.R, inst/ChangeLog:
	  ChangeLog

2006-05-02 09:08  rsbivand

	* R/gwr.R, man/georgia.Rd, R/gwr1.R, R/gwr1.cv.R: glm extension
